--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==23.0.0
 packaging==25.0
 pillow==11.3.0
 psycopg==3.2.10
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 sqlparse==0.5.3
 typing_extensions==4.15.0
